prevent default on mobile menu

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -22,7 +22,7 @@
 }
 
 .header__menu {
-  position: absolute;
+  position: fixed;
   top: 1.75rem;
   right: 1rem;
   display: none;
